[dependencies]
ndarray = '0.13.0'
num-traits = '0.2.10'
numpy = '0.7.0'
sprs = '0.7.1'

[dependencies.linear_solver]
path = '../linear_solver'

[dependencies.map_solver]
path = '../map_solver'

[dependencies.pyo3]
features = [
    'python3',
    'extension-module',
]
version = '0.8.3'

[dependencies.scorus]
git = 'https://github.com/astrojhgu/scorus.git'

[dependencies.simobs]
path = '../simobs'

[lib]
crate-type = ['cdylib']
name = 'pyms'

[package]
authors = ['Gu Junhua <jhgu@nao.cas.cn>']
edition = '2018'
name = 'pyms'
version = '0.1.0'
